# CertKeeper

./: .gitignore  CLAUDE.md  Dockerfile.build  README.en.md  README.md  build.py  certkeeper.spec  certkeeper.yaml.example  pyproject.toml
certkeeper/: __init__.py  cli.py  config.py  exceptions.py  providers.py  runtime.py
certkeeper/acme_client/: __init__.py  account.py  client.py
certkeeper/challenges/: __init__.py  base.py  dns01.py  http01.py
certkeeper/core/: __init__.py  daemon.py  manager.py  scheduler.py  store.py
certkeeper/deployers/: __init__.py  aliyun_cdn.py  base.py  nginx_local.py  nginx_ssh.py  tencent_cdn.py
certkeeper/dns/: __init__.py  aliyun.py  base.py
certkeeper/notifications/: __init__.py  base.py  email.py
certkeeper/web/: __init__.py  app.py  auth.py  resource_fields.py  routes.py
certkeeper/web/templates/: base.html  certificate_detail.html  certificate_form.html  dashboard.html  login.html  runtime.html
docs/superpowers/plans/: 2026-04-14-certificate-config-ui.md  2026-04-15-acme-real-implementation.md
docs/superpowers/specs/: 2026-04-13-certkeeper-design.md  2026-04-14-certificate-config-ui-design.md  2026-04-15-acme-real-implementation-design.md
tests/: test_challenges.py  test_cli.py  test_cli_daemon.py  test_config.py  test_manager.py  test_registry.py  test_runtime.py  test_scheduler.py  test_store.py  test_web_actions.py  test_web_app.py  test_web_auth.py  test_web_cert_crud.py  test_web_cli.py  test_web_config.py
